--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@playwright/test": "^1.52.0",
     "@types/jest": "^29.5.12",
+    "@types/node": "^22.15.17",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
