--- a/app.json
+++ b/app.json
@@ -4,7 +4,6 @@
     "slug": "meowcash-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,9 +12,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/splash-icon.png",
         "backgroundColor": "#F8EBEC"
-      }
+      },
+      "package": "com.deuteront.meowcashmobile"
     },
     "web": {
       "bundler": "metro",
