--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "test:e2e": "concurrently \"npx expo run:android\" \"sleep 10 && npx wdio run wdio.conf.ts\""
   },
   "jest": {
     "preset": "jest-expo"
@@ -24,10 +25,14 @@
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.67.1",
+    "@wdio/appium-service": "^9.14.0",
+    "@wdio/cli": "^9.14.0",
+    "appium": "^2.18.0",
     "date-fns": "^4.1.0",
     "expo": "~52.0.36",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.6",
+    "expo-dev-client": "~5.0.20",
     "expo-document-picker": "~13.0.3",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
@@ -53,18 +58,41 @@
     "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "webdriverio": "^9.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "@wdio/local-runner": "^9.14.0",
+    "@wdio/mocha-framework": "^9.14.0",
+    "@wdio/spec-reporter": "^9.14.0",
+    "@wdio/visual-service": "^8.0.1",
+    "appium-uiautomator2-driver": "^4.2.3",
+    "concurrently": "^9.1.2",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.5",
     "react-native-gifted-charts": "^1.4.58",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "description": "Meow Cash é uma aplicação de controle financeiro desenvolvida para ajudar usuários a gerenciar suas despesas e receitas\r de forma eficiente e intuitiva.",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Desafio-Financeiro/meowcash-mobile.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/Desafio-Financeiro/meowcash-mobile/issues"
+  },
+  "homepage": "https://github.com/Desafio-Financeiro/meowcash-mobile#readme"
 }
