--- a/app.json
+++ b/app.json
@@ -13,9 +13,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/splash-icon.png",
         "backgroundColor": "#F8EBEC"
-      }
+      },
+      "package": "com.deuteront.meowcashmobile"
     },
     "web": {
       "bundler": "metro",
