--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -25,9 +25,10 @@
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.67.1",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.36",
+    "expo": "~52.0.0",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.6",
+    "expo-dev-client": "~5.0.20",
     "expo-document-picker": "~13.0.3",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
@@ -60,11 +61,24 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
-    "jest": "^29.2.1",
+    "detox": "^20.38.0",
+    "jest": "^29.7.0",
     "jest-expo": "~52.0.5",
     "react-native-gifted-charts": "^1.4.58",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "detox": {
+    "test-runner": "jest",
+    "configurations": {
+      "android.emu.debug": {
+        "device": {
+          "avdName": "Emulador",
+          "type": "emulator"
+        },
+        "app": "android/app/build/outputs/apk/debug/app-debug.apk"
+      }
+    }
+  }
 }
