--- a/package.json
+++ b/package.json
@@ -58,10 +58,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@testing-library/react-native": "~13.2.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
-    "jest": "^29.2.1",
+    "jest": "^29.7.0",
     "jest-expo": "~52.0.5",
     "react-native-gifted-charts": "^1.4.58",
     "react-test-renderer": "18.3.1",
