--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.67.1",
     "date-fns": "^4.1.0",
     "expo": "~52.0.36",
@@ -54,7 +55,8 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "recoil": "^0.7.7"
+    "react-redux": "^9.2.0",
+    "recoil": "^0.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
